--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
-dist: trusty
+dist: xenial
 before_install:
-- sudo apt-get -qq update && sudo apt-get install -y texlive-full
+- sudo apt-get update && sudo apt-get install --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra texlive-latex-recommended texline-extra-utils texlive-science dvipng
 script:
 - texfot pdflatex resolucion.tex
